2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/resources.cfg : add entry for ModelDefinitions

2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Avatar.cpp, src/components/ogre/EmberEntityFactory.cpp, src/components/ogre/EmberOgre.cpp: updates for new ModelDefinitions system
	* src/components/ogre/Makefile.am : rearrange libs

2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/modeldefinitions/*
		* modeldefintiions now behave more like an Ogre .material script, with many models defined in one file

2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Makefile.am, src/components/ogre/model/Model.cpp, src/components/ogre/model/Model.h, src/components/ogre/model/ModelDefinitions.cpp, src/components/ogre/model/ModelDefinitions.h,src/components/ogre/model/ModelDefinitionsManager.cpp, src/components/ogre/model/ModelDefintionsManager.h, src/components/ogre/model/XMLModelDefinitionSerializer.cpp, src/components/ogre/model/XMLModelDefinitionSerializer.h:
		* incorporated changes from the Cataclysmos project, http://www.cataclysmos.org/
		* removed xerces in favor of tinyxml
		* changed the way the ModelDefinitions work to behave more like the other resources in Ogre. All .modeldef files are now parsed at start.

2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/Singleton.h: added instance() method

2005-05-17  Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/tinyxml/*, src/framework/Makefile.am:
		* added tinyxml implementation adapted to Ogre and with case insensitive comparison, this will lead to xerces-c being phased out

2005-05-15  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/ModelDefinition.cpp: use the S_LOG* macros

2005-05-15  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Makefile.am: removed obsolete files

2005-05-12  Erik Hjortsberg  <erik@katastrof.nu>
